<resources>
    <string name="app_name">Muncher</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="id">ID</string>
    <string name="email_hint">Enter email</string>
    <string name="forgot_your_password">forgot password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register_now">Don\'t have an account register now</string>
    <string name="password">Password</string>
    <string name="register_now">Register now</string>
    <string name="already_have_an_account_login_now">Already have an account, login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="permission_required_toast">Permission required</string>
    <string name="permission_rationale_location">Rationale location permission</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="muncher">Muncher</string>
    <string name="title_activity_main_app">MainAppActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="welcome_msg">Hello, Muncher</string>
    <string name="welcome">You are welcome we have missed you!</string>
    <string name="register">Register</string>
    <string name="not_muncher">Not a muncher yet ?</string>
    <string name="forgot_password">Recover password</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome2">I think you are ready to munch Now</string>
    <string name="welcome_msg2">Hey Newbie</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="terms_and_conditions">"By creating an account you agree to the Terms and Conditions including or privacy policy "</string>
    <string name="confirm_terms">Please, confirm terms and conditions.</string>
    <string name="or">Or</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="doodle">doodle</string>
    <string name="order_that_meal_you_need_already_prepared_and_hot">Order that meal you need already prepared and Hot</string>
    <string name="how_about_you_order_something_fresh_and_healthily_a_good_to_go_meal">How about you order something fresh and healthily, a good to go meal</string>
    <string name="recover_password">Recover Password</string>
    <string name="recover_msg">Well,it seem you forgot  your passsword.</string>
    <string name="recover_info">Insert your email to get verifcation code</string>
    <string name="send_code">Send code</string>
    <string name="recover_password_sent">Recovery Code Sent</string>
    <string name="recover_sent_msg">Dear muncher check  your mail for your recovery code</string>
    <string name="open_mail">Open mail</string>
    <string name="inbox">inbox</string>
    <string name="recovery_code">Recovery code</string>
    <string name="insert_your_email_to_get_recovery_code">Insert your email to get recovery code</string>
    <string name="confirm_code">Confirm code</string>
    <string name="reset_password">Reset password</string>
    <string name="your_password_nreset_was_nsuccesful">Your Password \nReset was \nSuccessful</string>
    <string name="you_all_set">You all set!</string>
    <string name="homepage">Homepage</string>
    <string name="cart">Cart</string>
    <string name="lorem_ipsum">slide</string>
    <string name="do_know_that_burger_you_love_can_order_it_too">Do know that Burger you love \ncan order it too</string>
    <string name="burger2">Okay Just take a look this burger, \nyeah can order it too</string>
    <string name="burger3">Dear Muncher,Go to the next screen, sign up  or sign in and \norder that burger too.</string>
    <string name="next">Next</string>
    <string name="go_to_previous_sreen">Prev</string>
    <string name="please_enter_the_4_digit_code_from_your_email">Please, enter the 4 digit code from your email</string>
    <string name="please_enter_your_new_password">Please, enter your new password</string>
</resources>