<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginStart="@dimen/_25sdp"
    android:layout_marginTop="@dimen/_50sdp"
    android:layout_marginEnd="@dimen/_25sdp"
    tools:context=".ui.auth.SendEmailFragment">

   <LinearLayout
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_30sdp"
            android:fontFamily="@font/dm_sans_medium"
            android:text="@string/recover_password_sent"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:fontFamily="@font/dm_sans_medium"
            android:text="@string/recover_sent_msg"
            android:textSize="@dimen/_13ssp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/open_mail_img"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_90sdp"
        android:padding="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:src="@drawable/ic_inbox_img"
        android:background="#90D772"
        app:layout_constraintEnd_toEndOf="@+id/header"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="@+id/header"
        app:layout_constraintTop_toBottomOf="@+id/header"
        android:contentDescription="@string/inbox" />



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/open_mail_img">

        <Button
            android:id="@+id/open_mail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_1sdp"
            android:layout_marginEnd="@dimen/_1sdp"
            android:layout_marginBottom="@dimen/_1sdp"
            android:fontFamily="@font/dm_sans_medium"
            android:text="@string/open_mail"
            android:textAllCaps="false" />

        <ImageView
            android:id="@+id/loader"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/app_name"
            android:visibility="invisible" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>