<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:layout_marginStart="@dimen/_25sdp"
    android:layout_marginTop="@dimen/_50sdp"
    android:layout_marginEnd="@dimen/_25sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.RecoveryCodeFragment">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_30sdp"
            android:fontFamily="@font/dm_sans_medium"
            android:text="@string/recovery_code"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:fontFamily="@font/dm_sans_medium"
            android:text="@string/please_enter_the_4_digit_code_from_your_email"
            android:textSize="@dimen/_13ssp" />

    </LinearLayout>

    <com.goodiebag.pinview.Pinview
        android:id="@+id/open_mail_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_25sdp"
        app:pinLength="5"
        app:pinBackground="@drawable/ic_edit_view_background"
        app:layout_constraintEnd_toEndOf="@+id/header"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="@+id/header"
        app:layout_constraintTop_toBottomOf="@+id/header"/>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/open_mail_img">

        <Button
            android:id="@+id/open_mail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_1sdp"
            android:layout_marginEnd="@dimen/_1sdp"
            android:layout_marginBottom="@dimen/_1sdp"
            android:fontFamily="@font/dm_sans_medium"
            android:text="@string/confirm_code"
            android:textAllCaps="false" />

        <ImageView
            android:id="@+id/loader"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/app_name"
            android:visibility="invisible" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>